--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Flask-SocketIO-Chat: {{ room }}</title>
+        <title>Negotiation Fun: {{ room }}</title>
         <script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
         <script type="text/javascript" charset="utf-8">
@@ -30,11 +30,14 @@
             function leave_room() {
                 socket.emit('left', {}, function() {
                     socket.disconnect();
-
+		    return null;
                     // go back to the login page
                     window.location.href = "{{ url_for('main.index') }}";
                 });
             }
+            window.onbeforeunload = function(){
+		leave_room();
+	    }
         </script>
     </head>
     <body>
