--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -41,9 +41,20 @@
         </script>
     </head>
     <body>
-        <h1>Flask-SocketIO-Chat: {{ room }}</h1>
+    <div id="chat_container", style="float:left; width:50%">
+        <h1>Negotiation Fun</h1>
+        <p>
+            To the right, we've displayed your culinary preferences and a list of restaurants that you could go to. Your
+             goal is to chat with your opponent and decide which of these restaurants to eat at, based on both your
+            preferences. May the best negotiator win!
+        </p>
         <textarea id="chat" cols="80" rows="20"></textarea><br><br>
         <input id="text" size="80" placeholder="Enter your message here"><br><br>
-        <a href="#" onclick="leave_room();">Leave this room</a>
+        <a href="/" onclick="leave_room();">Leave this room</a>
+    </div>
+    <div id="info_container", style="float:left; width:50%">
+        <h3>Some scenario text here</h3>
+        <button id="submit">Submit</button>
+    </div>
     </body>
 </html>
